# mc-paper-docker

./: Cargo.toml  Dockerfile  docker-build.sh  readme.md
.github/: workflows
.github/workflows/: main.yml
src/: api.rs  config.rs  err.rs  main.rs  processes.rs  utils.rs
