[package]
name = "mc-update"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
cron = "0.16.0"
err = { git = "https://github.com/EthanScully/err.git" }
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
